# competitive-coding

./: .editorconfig  .gitignore  README.md  package.json  pyproject.toml
kotlin/: .gitignore  build.gradle.kts
kotlin/gradle/wrapper/: gradle-wrapper.properties
kotlin/src/main/kotlin/: Main.kt
kotlin/src/main/kotlin/DeleteANodeFromALinkedList/: Solution.kt
kotlin/src/main/kotlin/InsertANodeAtASpecificPositionInALinkedList/: Solution.kt
kotlin/src/main/kotlin/adventOfCode/day1/: solution.kt
kotlin/src/main/kotlin/adventOfCode/y2015/day1/: solution.kt
kotlin/src/main/kotlin/adventOfCode/y2015/day2/: solution.kt
kotlin/src/main/kotlin/hackerrank/DeleteANodeFromALinkedList/: Solution.kt  problem.md  solution.kt
kotlin/src/main/kotlin/hackerrank/InsertANodeAtASpecificPositionInALinkedList/: Solution.kt  problem.md  solution.kt
python/: .gitignore  README.md
python/src/adventOfCode/y2015/day3/: solution.py
python/src/hackerrank/insert_a_node_at_a_specific_position_in_a_linked_list/: solution.py
python/src/leetcode/increasing_triplet_subsequence/: inputs.py  solution.py
python/src/leetcode/product_of_array_except_self/: inputs.py  problem.md  solution.py
python/src/leetcode/string-compression/: inputs.py  solution.py
ruby/: .gitignore
typescript/: .gitignore
